--- a/formop.html
+++ b/formop.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="Cabecera">
-		<a href="todo.html" id="letracabecera">
+		<a href="index.html" id="letracabecera">
 			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
 			Galería de arte
 		</a>
@@ -19,7 +19,7 @@
 	<div id="buscador2">
 		<p id="letrasbusca">Buscador:</p>
 		<span id="letrasbusca">Dibujos:</span><br>
-  		<a href="todo.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Todo</a><br>
+  		<a href="index.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Todos</a><br>
   		<a href="tradicional.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Tradicional</a><br>
   		<a href="digital.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Digital</a><br><br>
   		<a href="term.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Información</a><br>
