--- a/term.html
+++ b/term.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="Cabecera">
-		<a href="todo.html" id="letracabecera">
+		<a href="index.html" id="letracabecera">
 			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
 			Galería de arte
 		</a>
@@ -19,7 +19,7 @@
 	<div id="buscador2">
 		<p id="letrasbusca">Buscador:</p>
   		<span id="letrasbusca">Dibujos:</span><br>
-  		<a href="todo.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Todo</a><br>
+  		<a href="index.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Todos</a><br>
   		<a href="tradicional.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Tradicional</a><br>
   		<a href="digital.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Digital</a><br><br>
   		<a href="term.html" id="opcionesbuscax">Información</a><br>
@@ -84,9 +84,9 @@
 	</div>
 	<div id="galdef">
 		<p id="nombre">Terminos y definiciones: </p>
-		<p id="def"><span id="bonito">Digital: </span>Dibujos que se realizan de manera digital, o sea con ratón, lapiz táctil y tableta gráfica, móvil, tablet... Todo lo que se realiza a través de un ordenador o tablet.</p>
-		<p id="def"><span id="bonito">Tradicional:  </span>Dibujos realizados al óleo, acuarelas, carboncillo, temperas, lápices de colores, rotuladores... Todo lo que realices en físico.</p>
-		<p id="def"><span id="bonito">Acuarelas:  </span>Son las típicas pinturas que todos hemos usado que al añadir más agua mas transparentes son.</p>
+		<p id="def"><span id="bonito">Digital: </span>Dibujos que se realizan de manera digital, o sea con ratón, lapiz táctil y tableta gráfica, móvil, tablet... index lo que se realiza a través de un ordenador o tablet.</p>
+		<p id="def"><span id="bonito">Tradicional:  </span>Dibujos realizados al óleo, acuarelas, carboncillo, temperas, lápices de colores, rotuladores... index lo que realices en físico.</p>
+		<p id="def"><span id="bonito">Acuarelas:  </span>Son las típicas pinturas que indexs hemos usado que al añadir más agua mas transparentes son.</p>
 		<p id="def"><span id="bonito">Acuarelable:  </span>Se mezclan bien gracias a usar agua exactamente como las acuarelas y pueden encontrarse tanto lápices como rotuladores.</p>
 		<p id="def"><span id="bonito">Lienzo:  </span>Es donde se dibuja.</p>
 		<p id="def"><span id="bonito">Colorear:  </span>Es llenar de colores el dibujo.</p>
@@ -96,7 +96,7 @@
 		<p id="def"><span id="bonito">Teoría del color:  </span>Es muy necesaria y usada por los artistas para que el color tenga un sentido, esta teoría te explica como combinar colores para que se vean bien integrados entre sí y no sea horroroso de ver. Hay muchos vídeos explicandola sino te invito a usar Adobe Colors para sacar facilmente paletas de colores que combinen.</p>
 		<p id="def"><span id="bonito">ControlZ:  </span>Un término usado por los artistas del mundo digital, es como la goma de borrar pero te borra un paso/línea de tu dibujo. Mucha gente crítica el dibujo digital debido a la facilidad de usar Control+Z y las modificaciones que se pueden hacer pero la mayoría se pueden usar tambien en tradicional aunque sea más aparatoso, no significa que sea fácil dibujar en digital.</p>
 		<p id="def"><span id="bonito">OC:  </span>Significa literalmente "Original Character" en inglés que traducido es "Personaje Original", esto significa un personaje que has creado tu, tanto físicamente como psicologicamente. Esto deja volar bastante tu imaginación porque puedes crear distintos personajes con diferentes personalidades e incluso crear una historia entre ellos.</p>
-		<p id="def"><span id="bonito">Pinceles:  </span>Hay infinidad de pinceles en el ámbito digital, puedes hacer brochas alargadas, que hagan círculos e incluso poner la cara de tu personaje favorito. En tradicional solamente hay distintos grosores y tamaños por lo que en digital hay una clara ventaja aquí al tenerlo todo.</p>
+		<p id="def"><span id="bonito">Pinceles:  </span>Hay infinidad de pinceles en el ámbito digital, puedes hacer brochas alargadas, que hagan círculos e incluso poner la cara de tu personaje favorito. En tradicional solamente hay distintos grosores y tamaños por lo que en digital hay una clara ventaja aquí al tenerlo index.</p>
 		<p id="def"><span id="bonito">Rotuladores:  </span>Tienen muchas bases, digamos que si son en base agua se pueden mezclar usando agua (tambien se le llaman acuarelables) y si tienen base alcohol se secan rápido lo que permiten dar mas de una capa para oscurecer o antes de secarse mezclar colores, algunas personas usan alcohol como rotulador transparente para mejorar las mezclas (Tienen muy buenos acabados). Se utilizan para colorear.</p>
 		<p id="def"><span id="bonito">Lápices:  </span>Los lápices suelen ser para colorear los dibujos (algunos son tambien acuarelables), los hay más blanditos o más duros y eso ayudará a la hora de mezclar si son blanditos aunque tambien pueden manchar tu dibujo y los más duros son mas precisos.</p>
 	</div>
