--- a/zeroq.html
+++ b/zeroq.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="Cabecera">
-		<a href="todo.html" id="letracabecera">
+		<a href="index.html" id="letracabecera">
 			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
 			Galería de arte
 		</a>
@@ -26,7 +26,7 @@
 	<div id="buscador2">
 		<p id="letrasbusca">Buscador:</p>
 		<span id="letrasbusca">Dibujos:</span><br>
-  		<a href="todo.html" id="opcionesbusca">Todo</a><br>
+  		<a href="index.html" id="opcionesbusca">Todos</a><br>
   		<a href="tradicional.html" id="opcionesbusca">Tradicional</a><br>
   		<a href="digital.html" id="opcionesbusca">Digital</a><br><br>
   		<a href="term.html" id="opcionesbusca">Información</a><br>
