--- a/narumy.html
+++ b/narumy.html
@@ -26,12 +26,69 @@
 	<div id="buscador2">
 		<p id="letrasbusca">Buscador:</p>
 		<span id="letrasbusca">Dibujos:</span><br>
-  		<a href="index.html" id="opcionesbusca">Todos</a><br>
-  		<a href="tradicional.html" id="opcionesbusca">Tradicional</a><br>
-  		<a href="digital.html" id="opcionesbusca">Digital</a><br><br>
-  		<a href="term.html" id="opcionesbusca">Información</a><br>
-  		<a href="formop.html" id="opcionesbusca">Danos tu opinión</a>
-	</div>
+  		<a href="index.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Todos</a><br>
+  		<a href="tradicional.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Tradicional</a><br>
+  		<a href="digital.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Digital</a><br><br>
+  		<a href="term.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Información</a><br>
+  		<a href="formop.html" id="opcionesbusca" onMouseover="this.style.color='blanchedalmond'" onMouseout="this.style.color='black'">Danos tu opinión</a>
+  		<br><br><br><br>
+  		<table id="calen">
+			<tr>
+				<th>L</th>
+				<th>M</th>
+				<th>X</th>
+				<th>J</th>
+				<th>V</th>
+				<th>S</th>
+				<th>D</th>
+			</tr>
+			<tr>
+			    <td></td>
+			    <td></td>
+			    <td>1</td>
+			    <td>2</td>
+			    <td>3</td>
+			    <td>4</td>
+			    <td>5</td>
+			</tr>
+			<tr>
+   				<td>6</td>
+			    <td>7</td>
+			    <td>8</td>
+			    <td>9</td>
+			    <td>10</td>
+			    <td>11</td>
+			    <td>12</td>
+			</tr>
+			<tr>
+   				<td>13</td>
+			    <td>14</td>
+			    <td>15</td>
+			    <td>16</td>
+			    <td>17</td>
+			    <td>18</td>
+			    <td>19</td>
+			</tr>
+			<tr>
+   				<td>20</td>
+			    <td>21</td>
+			    <td>22</td>
+			    <td>23</td>
+			    <td>24</td>
+			    <td>25</td>
+			    <td>26</td>
+			</tr>
+			<tr>
+   				<td>27</td>
+			    <td>28</td>
+			    <td>29</td>
+			    <td>30</td>
+			    <td>31</td>
+			    <td></td>
+			    <td></td>
+			</tr>
+		</table>
+  	</div>
 	<div id="galeria">
 		<p id="nombre">Narumy Natsue</p>
 		<img id="img1" src="imagenes/narumynatsuedig.jpg" alt="Dibujo" width="12.75%">
