--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div id="Contenido1">
 
-		<p id="espacio">Esta página está dedicada a promover artistas actuales, ya sea en digital o tradicional. Algunos serán más conocidos que otros pero eso no es lo importante, queremos actualizar el arte porque poco se habla de la calidad actual.</p>
+		<p id="espacio">Esta página está dedicada a promover artistas actuales, ya sea en digital o tradicional. Algunos serán más conocidos que otros pero eso no es lo importante, queremos actualizar el arte porque poco se habla de la calidad actual. <br> Algunas imágenes cambian al pasar el ratón por encima, la chica de la derecha sonríe</p>
 	</div>
 	<div id="buscador">
 		<p id="letrasbusca">Buscador:</p>
