Cambio en el formulario y arreglos

--- a/formop.html
+++ b/formop.html
@@ -84,7 +84,7 @@
 	</div>
 	<div id="galeria">
 		<p id="nombre">Danos tu opinión: </p>
-		<form action="/action_page.php" target="_self" id="rad">
+		<form action="index.html" target="_self" id="rad">
 			<label for="star">&nbsp;✰&nbsp;&nbsp;★&nbsp;&nbsp;★&nbsp;&nbsp;★&nbsp;&nbsp;★&nbsp;&nbsp;★</label><br>
   			<input type="range" name="star" min="0" max="5" value="0"><br><br>
 			
@@ -92,7 +92,7 @@
   			<input type="text" name="name" value="Nombre" pattern="[A-ZÑÁÉÍÓÚ][a-zzñáéíúó]*(\s[A-ZÑÁÉÍÓÚ][a-zzñáéíúó]*)*"><br>
 
 			<label for="name">Edad: </label><br>
-  			<input type="text" name="name" value="Nombre" pattern="[0-9]*"><br>
+  			<input type="text" name="name" value="Edad" pattern="[0-9]*"><br>
 
   			<label for="lname">Email: </label><br>
  			<input type="email" name="email" value="correo@gmail.com" pattern="[a-zA-Z0-9]+([._][a-zA-Z0-9]*)*@[a-z]*\.[a-z][{2, 3}"><br><br>
