--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<a href="replica.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">Replica004</p>
-			<img src="imagenes/replicadig.jpg" alt="Dibujo replica" height="65%" >
+			<img src="imagenes/replicadig.jpg" alt="Dibujo replica" width="75%" >
 		</div>
 	</a>
 	<a href="narumy.html">
