Cambios en digital y en el css, lo demás quedá por cambiar

--- a/digital.html
+++ b/digital.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="Cabecera">
 		<a href="index.html" id="letracabecera">
-			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
+			<img id="img2" src="imagenes/logo.png" alt="logo">
 			Galería de arte
 		</a>
 	</div>
@@ -84,44 +84,44 @@
   	<a href="zeroq.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">ZeroQ_0q</p>
-			<img alt="Cambiar imagen" width="45%" onmouseout="this.src='imagenes/zerodig1.jpg';" onmouseover="this.src='imagenes/zerodig2.jpg';" src="imagenes/zerodig1.jpg" />
+			<img id="img1" alt="Cambiar imagen" onmouseout="this.src='imagenes/zerodig1.jpg';" onmouseover="this.src='imagenes/zerodig2.jpg';" src="imagenes/zerodig1.jpg" />
 		</div>
 	</a>
   	
 	<a href="replica.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre">Replica004</p>
-			<img id="img1" src="imagenes/replicadig.jpg" alt="Dibujo replica" height="65%" >
+			<img id="imgr" src="imagenes/replicadig.jpg" alt="Dibujo replica" >
 		</div>
 	</a>
 	<a href="narumy.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre">NarumyNatsue</p>
-			<img src="imagenes/narumynatsuedig.jpg" alt="Dibujo Narumy" height="65%" >
+			<img id="img1" src="imagenes/narumynatsuedig.jpg" alt="Dibujo Narumy" >
 		</div>
 	</a>
 	<a href="eme.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre">Eme</p>
-			<img src="imagenes/eme.png" alt="Dibujo Eme" width="45%"><br>
+			<img id="img1" src="imagenes/eme.png" alt="Dibujo Eme"><br>
 		</div>
 	</a>
 	<div id="Contenido2" class="boton">
 		<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">Piyoasdf</p>
-		<img src="imagenes/piyo.jpg" width="53%">
+		<img id="img1" src="imagenes/piyo.jpg">
 	</div>
 	<div id="Contenido2" class="boton">
 		<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">Happy's cafe</p>
-		<img src="imagenes/happyscafe.png" width="52%">
+		<img id="img1" src="imagenes/happyscafe.png">
 	</div>
 	<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">Yapura Meri</p>
-			<img src="imagenes/yapmeri.jpg" width="50%">
+			<img id="img1" src="imagenes/yapmeri.jpg">
 	</div>
 	<a href="https://twitter.com/artsbycarlos" target="_blank">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">ArtsByCarlos</p>	
-			<img src="imagenes/artcarlo.jpg" width="39%">	
+			<img id="img1" src="imagenes/artcarlo.jpg">	
 		</div>
 	</a>
 </body>
