Responsive en las vistas index, digital y tradicional

--- a/digital.html
+++ b/digital.html
@@ -81,6 +81,7 @@
 			</tr>
 		</table>
   	</div>
+  	<div id="marginao">
   	<a href="zeroq.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">ZeroQ_0q</p>
@@ -124,5 +125,6 @@
 			<img id="img1" src="imagenes/artcarlo.jpg">	
 		</div>
 	</a>
+	</div>
 </body>
 </html>
