--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <body>
 	<div id="Cabecera">
 		<a href="index.html" id="letracabecera">
-			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
+			<img id="img2" src="imagenes/logo.png" alt="logo">
 			Galería de arte
 		</a>
 	</div>
 	<div id="Contenido1">
-
-		<p id="espacio">Esta página está dedicada a promover artistas actuales, ya sea en digital o tradicional. Algunos serán más conocidos que otros pero eso no es lo importante, queremos actualizar el arte porque poco se habla de la calidad actual. <br> Algunas imágenes cambian al pasar el ratón por encima, la chica de la derecha sonríe</p>
+		<p id="espacio">Esta página está dedicada a promover artistas actuales, ya sea en digital o tradicional. Algunos serán más conocidos que otros pero eso no es lo importante, queremos actualizar el arte porque poco se habla de la calidad actual. <br> Algunas imágenes cambian al pasar el ratón por encima, la chica de la izquierda sonríe</p>
 	</div>
 	<div id="buscador">
 		<p id="letrasbusca">Buscador:</p>
@@ -81,6 +80,7 @@
 			</tr>
 		</table>
 	</div>
+	<div id="marginao">
 	<a href="zeroq.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">ZeroQ_0q</p>
@@ -123,6 +123,6 @@
 			<img src="imagenes/artcarlo.jpg" width="39%">	
 		</div>
 	</a>
-	
+	</div>
 </body>
 </html>
