--- a/tradicional.html
+++ b/tradicional.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="Cabecera">
 		<a href="index.html" id="letracabecera">
-			<img id="img1" src="imagenes/logo.png" alt="logo" width="9%">
+			<img id="img2" src="imagenes/logo.png" alt="logo" width="9%">
 			Galería de arte
 		</a>
 	</div>
@@ -81,6 +81,7 @@
 			</tr>
 		</table>
 	</div>
+	<div id="marginao">
 	<a href="zeroq.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">ZeroQ_0q</p>
@@ -90,7 +91,7 @@
 	<a href="replica.html">
 		<div id="Contenido2" class="boton">
 			<p id="nombre"  onMouseover="this.style.color='#5C5544'" onMouseout="this.style.color='black'">Replica004</p>
-			<img src="imagenes/replicadig.jpg" alt="Dibujo replica" height="65%" >
+			<img id="imgr" src="imagenes/replicadig.jpg" alt="Dibujo replica" >
 		</div>
 	</a>
 	<div id="Contenido2" class="boton">
@@ -123,5 +124,6 @@
 			<img src="imagenes/artcarlo.jpg" width="39%">	
 		</div>
 	</a>
+</div>
 </body>
 </html>
